# TDC7201-GPSDO-Module

./: .gitignore  README.md
docs/: API_DOCUMENTATION.md  CALIBRATION_GUIDE.md  DESIGN_NOTES.md  MEASUREMENT_UNCERTAINTY.md
firmware/: CMakeLists.txt  idf_component.yml
firmware/esp32-c3/components/tdc7201_driver/: tdc7201_driver.c
firmware/esp32-c3/main/: main.c
firmware/main/: main.c  measurement.c  measurement.h  tdc7201_driver.c  tdc7201_driver.h  wifi_config.c  wifi_config.h
hardware/: BOM.csv  DESIGN_NOTES.md
hardware/kicad/: TDC7201-GPSDO-Module.kicad_sch  TDC7201-Module.kicad_pcb  TDC7201-Module.kicad_sch  sym-lib-table
web/: package.json  vite.config.js
web/public/: index.html
web/src/: App.vue  main.js
web/src/api/: measurements.js
web/src/components/: ConfigPanel.vue  MeasurementDisplay.vue  UncertaintyAnalysis.vue
